# Siddharta_MC_Integrated

./: .gitignore  CMakeLists.txt  Makefile  Siddharta.cpp  clean  cmake_install.cmake  geom.txt  run.sh  sword.sh  unset_vis_ui  vis.mac
include/: G4KaonMinusAbsorptionAtRest.h  KLIMAXBoxWindowAntiBoostSD.h  KLIMAXCZTAntiBoostSD.h  KLIMAXCZTBoostSD.h  KLIMAXDegAntiBoostSD.h  KLIMAXDegBoostSD.h  KLIMAXHPGeBoostSD.h  KLIMAXTarget1AntiBoostSD.h  KLIMAXTarget2AntiBoostSD.h  KLIMAXTargetBoostSD.h  PhiMassFunction.h  SiddhartaAnalysisManager.h  SiddhartaAnti1SD.h  SiddhartaAnti2SD.h  SiddhartaAnti3SD.h  SiddhartaAnti4SD.h  SiddhartaAnti5SD.h  SiddhartaCard.h  SiddhartaDetectorConstruction.h  SiddhartaDetectorMessenger.h  SiddhartaEnergyDeposition.h  SiddhartaEventAction.h  SiddhartaGhostSD.h  SiddhartaHisto.h  SiddhartaKPlusSD.h  SiddhartaKaonDetectorBottomSD.h  SiddhartaKaonDetectorTopSD.h  SiddhartaLumiDetectorAntiBoostSD.h  SiddhartaLumiDetectorAntiboostSD.h  SiddhartaLumiDetectorBoostSD.h  SiddhartaMagneticField.h  SiddhartaPhysicsList.h  SiddhartaPrimaryGeneratorAction.h  SiddhartaRunAction.h  SiddhartaScintAntiSD.h  SiddhartaSteppingAction.h  SiddhartaSteppingVerbose.h  SiddhartaTrackerHit.h  SiddhartaTrackerSD.h  SiddhartaTrackingAction.h  (+2 more)
src/: G4KaonMinusAbsorptionAtRest.cpp  G4ParticleGun.cpp  G4ShortLivedConstructor.cpp  KLIMAXBoxWindowAntiBoostSD.cpp  KLIMAXCZTAntiBoostSD.cpp  KLIMAXCZTBoostSD.cpp  KLIMAXDegAntiBoostSD.cpp  KLIMAXDegBoostSD.cpp  KLIMAXHPGeBoostSD.cpp  KLIMAXTarget1AntiBoostSD.cpp  KLIMAXTarget2AntiBoostSD.cpp  KLIMAXTargetBoostSD.cpp  PhiMassFunction.cpp  SiddhartaAnalysisManager.cpp  SiddhartaAnti1SD.cpp  SiddhartaAnti2SD.cpp  SiddhartaAnti3SD.cpp  SiddhartaAnti4SD.cpp  SiddhartaAnti5SD.cpp  SiddhartaCard.cpp  SiddhartaDetectorConstruction.cpp  SiddhartaDetectorMessenger.cpp  SiddhartaEnergyDeposition.cpp  SiddhartaEventAction.cpp  SiddhartaGhostSD.cpp  SiddhartaHisto.cpp  SiddhartaKPlusSD.cpp  SiddhartaKaonDetectorBottomSD.cpp  SiddhartaKaonDetectorTopSD.cpp  SiddhartaLumiDetectorAntiBoostSD.cpp  SiddhartaLumiDetectorAntiboostSD.cpp  SiddhartaLumiDetectorBoostSD.cpp  SiddhartaMagneticField.cpp  SiddhartaPhysicsList.cpp  SiddhartaPrimaryGeneratorAction.cpp  SiddhartaRunAction.cpp  SiddhartaScintAntiSD.cpp  SiddhartaSteppingAction.cpp  SiddhartaSteppingVerbose.cpp  SiddhartaTrackerHit.cpp  (+4 more)
